# digsigctl

./: .gitignore  Cargo.toml  README.md
assets/: 00-reboot-nopassword.rules  70-pcspkr-beep.rules  Preferences  digsigctl.service  digsigctl.sudoers
src/: config.rs  constants.rs  from_io.rs  gui.rs  lib.rs  main.rs  net.rs  pacman.rs  portal.rs  rpc.rs  screenshot.rs  sudo.rs  sysinfo.rs  systemctl.rs  try_from_io.rs
src/config/: chromium_preferences.rs  error.rs  os.rs
src/rpc/: beep.rs  chromium.rs  error.rs  identify.rs  operation_mode.rs  reboot.rs  result.rs  web_browser.rs
src/rpc/result/: error.rs
src/sysinfo/: application.rs  cmdline.rs  cpu_info.rs  cpuinfo.rs  df.rs  efi.rs  meminfo.rs  mount.rs  sensors.rs  smart.rs  uptime.rs
