[package]
name = "digsigctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.10", features = ["derive"] }
configparser = "3.0.2"
either = "1.8.1"
erased-serde = "0.3.28"
ipnetwork = { version = "0.20.0", default-features = false }
local-ip-address = "0.5.4"
proc-cpuinfo = "0.1.4"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
subprocess = "0.2.9"
system_shutdown = "4.0.1"

[target."cfg(unix)".dependencies]
beep-evdev = { version = "0.1.2", features = ["serde"] }
home = "0.5.5"
