[package]
name = "digsigctl"
version = "0.1.20"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
configparser = "3.1"
either = "1.13"
erased-serde = "0.4"
ipnetwork = { version = "0.20", default-features = false }
local-ip-address = "0.6"
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
subprocess = "0.2"
sysinfo = "0.31"
system_shutdown = "4.0"

[target."cfg(unix)".dependencies]
beep-evdev = { version = "0.3", features = ["serde"] }
home = "0.5"
proc-cpuinfo = "0.1"
